Dish editing page and director menu page now have dish images. Images can be added properly now removing the old one and new images can be displayed.